styles.css
/* general */
:root {
    --col-nav: royalblue;
    --col-head: white;
    --col-main: lightgrey;
    --col-nav-text: white;
    --nav-width-lg: 250px;
    --nav-width-sm: 50px;
}

html,
body {
    height: 100%;
    width: 100%;
}

body {
    display: flex;
    font-family: 'Kanit', sans-serif;
}
button{
    background-color:var(--col-nav);
    color:var(--col-nav-text);
    padding:.5rem 1rem;
    height:fit-content;
    width:5rem;
}
input, button{
    border-radius:100vmin;
    border:none;
}
input{
    background-color:var(--col-main);
    width:80%;
}

/* nav */
#nav-pop {
    position: absolute;
    overflow: hidden;
    background-color: var(--col-nav);
    transition: width .5s;
    color: var(--col-nav-text);
    font-size: 1.5rem;
    display: flex;
    flex-direction: column;
    gap: 40px;
}

.nav-size {
    height: 100%;
    width: var(--nav-width-sm);
    padding: 0px 10px;
    flex-shrink: 0;
}

#nav-pop:hover {
    width: var(--nav-width-lg);

}

#nav-pop>ul {
    display: flex;
    flex-direction: column;
    gap: 10px;
}

#nav-pop>ul>li {
    display: flex;
    gap: 25px;
    align-items: center;
    cursor: pointer;
}

#nav-pop>ul>li>* {
    flex-shrink: 0;
}

.nav-sm-container {
    width: var(--nav-width-sm);
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav-sm-container+div {
    font-size: 1rem;
}

.nav-symbol {
    display: block;
    fill: var(--col-nav-text);
    width: 25px;
    height: 25px;
    display: flex;
    justify-content: center;
    align-items: center;
}

#logo {
    fill: var(--col-nav-text);
    width: var(--nav-width-sm);
    height: var(--nav-width-sm);
}

#logo,
#logo+div {
    padding-top: 10px;
}

/* main */
#main-container {
    width: 100%;
    background-color: var(--col-main);
    display: grid;
    grid-template-rows: 200px 1fr;
}
.symbol-default{
    fill:'black';
    width:1.25rem;
    height:1.25rem;
}
.img-profile-sm{
    fill:black;
    width:2.5rem;
    height:2.5rem;
}
.img-profile-lg{
    fill:black;
    width:3.5rem;
    height:3.5rem;
}
/* header */
#header {
    display: grid;
    grid-template: 1fr 2fr / 2fr 1fr;
}
#h_search{
    display:flex;
    gap:20px;
    align-items:center;
}
#h_user{
    display:flex;
    flex-direction:row;
    gap:20px;
    margin-left:auto;
    justify-content: center;
    align-items:center;
}
#h_user-greeting{
    display:flex;
    align-items:center;
    gap:20px;
}
.greeting{
    font-size:1rem;
    display:flex;
    flex-direction:column-reverse;
}
.username{
    font-size:1.5rem;
}
#h_nav{
    display:grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap:20px;
    margin:auto;
}


/* content */
#content {
    background-color: grey;
    display: grid;
    grid-template: 1fr 1fr / 3fr 1fr;
}

#cards-container {
    grid-area: 2 span / 1 span;
}

#news-container,
#trends-container {
    grid-column-start: 2;
}

/* temp */
#header>div,
#content>div, #header>nav{
    border: solid 1px;
    padding: 3px;
}

#header {
    background-color: white;
}

